# docling-webapp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-backend-core-docker-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-async-job-system-sse-progress/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-react-frontend-single-file-flow/: 03-01-PLAN.md  03-03-PLAN.md  03-CONTEXT.md
.planning/phases/04-options-panel-batch-conversion/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-05-SUMMARY.md  04-RESEARCH.md
.planning/phases/06-cancel-and-ux-fixes/: 06-02-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: adapter.py  config.py  converter.py  job_store.py  main.py  requirements.txt
backend/tests/: test_adapter_options.py  test_convert_form_fields.py  test_converter.py  test_job_store.py  test_job_store_options.py  test_sse_endpoint.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+76 files in other folders)
