[project]
name = "docling-webapp"
version = "0.1.0"
description = "Document conversion webapp powered by Docling + MLX on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]",
    "python-multipart",
    "docling>=2.84.0",
    "mlx-vlm",
    "tesserocr",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
